fixing not showing

--- a/style/cleoDucktra.css
+++ b/style/cleoDucktra.css
@@ -1,59 +1,58 @@
 :root {
-  --cleoquacktra-body-bg: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-  --cleoquacktra-msger-bg: #fff;
-  --cleoquacktra-border: 2px solid #ddd;
-  --cleoquacktra-left-msg-bg: #ececec;
-  --cleoquacktra-right-msg-bg: #579ffb;
+  --cleoducktra-body-bg: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+  --cleoducktra-msger-bg: #fff;
+  --cleoducktra-border: 2px solid #ddd;
+  --cleoducktra-left-msg-bg: #ececec;
+  --cleoducktra-right-msg-bg: #579ffb;
 }
 
 
 
-#cleoquacktra .msger {
+#cleoducktra .msger {
   display: flex;
   flex-flow: column wrap;
   justify-content: space-between;
   width: 100%;
   max-width: 867px;
-  margin: 25px 10px;
   height: calc(100% - 50px);
-  border: var(--cleoquacktra-border);
+  border: var(--cleoducktra-border);
   border-radius: 5px;
-  background: var(--cleoquacktra-msger-bg);
+  background: var(--cleoducktra-msger-bg);
   box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
 }
 
-#cleoquacktra .msger-header {
+#cleoducktra .msger-header {
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  border-bottom: var(--cleoquacktra-border);
+  border-bottom: var(--cleoducktra-border);
   background: #eee;
   color: #666;
 }
 
-#cleoquacktra .msger-chat {
+#cleoducktra .msger-chat {
   flex: 1;
   overflow-y: auto;
   padding: 10px;
 }
-#cleoquacktra .msger-chat::-webkit-scrollbar {
+#cleoducktra .msger-chat::-webkit-scrollbar {
   width: 6px;
 }
-#cleoquacktra .msger-chat::-webkit-scrollbar-track {
+#cleoducktra .msger-chat::-webkit-scrollbar-track {
   background: #ddd;
 }
-#cleoquacktra .msger-chat::-webkit-scrollbar-thumb {
+#cleoducktra .msger-chat::-webkit-scrollbar-thumb {
   background: #bdbdbd;
 }
-#cleoquacktra .msg {
+#cleoducktra .msg {
   display: flex;
   align-items: flex-end;
   margin-bottom: 10px;
 }
-#cleoquacktra .msg:last-of-type {
+#cleoducktra .msg:last-of-type {
   margin: 0;
 }
-#cleoquacktra .msg-img {
+#cleoducktra .msg-img {
   width: 50px;
   height: 50px;
   margin-right: 10px;
@@ -63,59 +62,59 @@
   background-size: cover;
   border-radius: 50%;
 }
-#cleoquacktra .msg-bubble {
+#cleoducktra .msg-bubble {
   max-width: 450px;
   padding: 15px;
   border-radius: 15px;
-  background: var(--cleoquacktra-left-msg-bg);
+  background: var(--cleoducktra-left-msg-bg);
 }
-#cleoquacktra .msg-info {
+#cleoducktra .msg-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
 }
-#cleoquacktra .msg-info-name {
+#cleoducktra .msg-info-name {
   margin-right: 10px;
   font-weight: bold;
 }
-#cleoquacktra .msg-info-time {
+#cleoducktra .msg-info-time {
   font-size: 0.85em;
 }
 
-#cleoquacktra .left-msg .msg-bubble {
+#cleoducktra .left-msg .msg-bubble {
   border-bottom-left-radius: 0;
 }
 
-#cleoquacktra .right-msg {
+#cleoducktra .right-msg {
   flex-direction: row-reverse;
 }
-#cleoquacktra .right-msg .msg-bubble {
-  background: var(--cleoquacktra-right-msg-bg);
+#cleoducktra .right-msg .msg-bubble {
+  background: var(--cleoducktra-right-msg-bg);
   color: #fff;
   border-bottom-right-radius: 0;
 }
-#cleoquacktra .right-msg .msg-img {
+#cleoducktra .right-msg .msg-img {
   margin: 0 0 0 10px;
 }
 
-#cleoquacktra .msger-inputarea {
+#cleoducktra .msger-inputarea {
   display: flex;
   padding: 10px;
-  border-top: var(--cleoquacktra-border);
+  border-top: var(--cleoducktra-border);
   background: #eee;
 }
-#cleoquacktra .msger-inputarea * {
+#cleoducktra .msger-inputarea * {
   padding: 10px;
   border: none;
   border-radius: 3px;
   font-size: 1em;
 }
-#cleoquacktra .msger-input {
+#cleoducktra .msger-input {
   flex: 1;
   background: #ddd;
 }
-#cleoquacktra .msger-send-btn {
+#cleoducktra .msger-send-btn {
   margin-left: 10px;
   background: rgb(0, 196, 65);
   color: #fff;
@@ -123,10 +122,10 @@
   cursor: pointer;
   transition: background 0.23s;
 }
-#cleoquacktra .msger-send-btn:hover {
+#cleoducktra .msger-send-btn:hover {
   background: rgb(0, 180, 50);
 }
 
-#cleoquacktra .msger-chat {
+#cleoducktra .msger-chat {
   background-color: #fcfcfe;
 }
